tried to fix the styling for the table. Got far enough to make it look realitively nice when all the words are equall length but if the note or the exercise name is too long it fucks with the css.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,3 +57,12 @@ hr {
  margin-right: 5px;
 }
 
+th.main {
+ width: 25%;
+}
+
+th.sec {
+ width: 25%;
+ color: white;
+ font-weight: normal;
+}
